// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TabBar > TabBar badgePropsVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="bar-wrapper"
    data-v-56c81c82=""
  >
    <div
      class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal"
      data-v-56c81c82=""
      role="tablist"
      style="z-index: 1;"
    >
      <!---->
      
      
      <div
        aria-label="首页，有16条消息"
        class="t-tab-bar-item t-tab-bar-item--normal"
        data-v-56c81c82=""
      >
        <div
          aria-expanded="false"
          aria-selected="true"
          class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--normal"
          role="tab"
        >
          <!---->
          <div
            class="t-tab-bar-item__text"
          >
            <!---->
            
            首页
            
          </div>
        </div>
        <!---->
      </div>
      <div
        aria-label="软件，有新的消息"
        class="t-tab-bar-item t-tab-bar-item--normal"
        data-v-56c81c82=""
      >
        <div
          aria-expanded="false"
          aria-selected="false"
          class="t-tab-bar-item__content t-tab-bar-item__content--normal"
          role="tab"
        >
          <!---->
          <div
            class="t-tab-bar-item__text"
          >
            <!---->
            
            软件
            
          </div>
        </div>
        <!---->
      </div>
      <div
        aria-label="聊天，New"
        class="t-tab-bar-item t-tab-bar-item--normal"
        data-v-56c81c82=""
      >
        <div
          aria-expanded="false"
          aria-selected="false"
          class="t-tab-bar-item__content t-tab-bar-item__content--normal"
          role="tab"
        >
          <!---->
          <div
            class="t-tab-bar-item__text"
          >
            <!---->
            
            聊天
            
          </div>
        </div>
        <!---->
      </div>
      <div
        aria-label="我的，有很多消息"
        class="t-tab-bar-item t-tab-bar-item--normal"
        data-v-56c81c82=""
      >
        <div
          aria-expanded="false"
          aria-selected="false"
          class="t-tab-bar-item__content t-tab-bar-item__content--normal"
          role="tab"
        >
          <!---->
          <div
            class="t-tab-bar-item__text"
          >
            <!---->
            
            我的
            
          </div>
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="bar-wrapper"
    data-v-56c81c82=""
  >
    <div
      class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal"
      data-v-56c81c82=""
      role="tablist"
      style="z-index: 1;"
    >
      <!---->
      
      
      <div
        aria-label="首页，有16条消息"
        class="t-tab-bar-item t-tab-bar-item--normal"
        data-v-56c81c82=""
      >
        <div
          aria-expanded="false"
          aria-selected="true"
          class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--normal"
          role="tab"
        >
          <div
            class="t-tab-bar-item__icon"
            style="height: 20px;"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__content"
              >
                
                
                <svg
                  class="t-icon t-icon-home"
                  data-v-56c81c82=""
                  style="font-size: 20px;"
                >
                  <use
                    href="#t-icon-home"
                  />
                </svg>
                
                
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              >
                <div
                  class="t-badge__count"
                >
                  16
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-tab-bar-item__text t-tab-bar-item__text--small"
          >
            <!---->
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        aria-label="软件，有新的消息"
        class="t-tab-bar-item t-tab-bar-item--normal"
        data-v-56c81c82=""
      >
        <div
          aria-expanded="false"
          aria-selected="false"
          class="t-tab-bar-item__content t-tab-bar-item__content--normal"
          role="tab"
        >
          <div
            class="t-tab-bar-item__icon"
            style="height: 20px;"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__content"
              >
                
                
                <svg
                  class="t-icon t-icon-app"
                  data-v-56c81c82=""
                  style="font-size: 20px;"
                >
                  <use
                    href="#t-icon-app"
                  />
                </svg>
                
                
              </div>
              <div
                class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
              >
                <div
                  class="t-badge__count"
                >
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-tab-bar-item__text t-tab-bar-item__text--small"
          >
            <!---->
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        aria-label="聊天，New"
        class="t-tab-bar-item t-tab-bar-item--normal"
        data-v-56c81c82=""
      >
        <div
          aria-expanded="false"
          aria-selected="false"
          class="t-tab-bar-item__content t-tab-bar-item__content--normal"
          role="tab"
        >
          <div
            class="t-tab-bar-item__icon"
            style="height: 20px;"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__content"
              >
                
                
                <svg
                  class="t-icon t-icon-chat"
                  data-v-56c81c82=""
                  style="font-size: 20px;"
                >
                  <use
                    href="#t-icon-chat"
                  />
                </svg>
                
                
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              >
                <div
                  class="t-badge__count"
                >
                  New
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-tab-bar-item__text t-tab-bar-item__text--small"
          >
            <!---->
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        aria-label="我的，有很多消息"
        class="t-tab-bar-item t-tab-bar-item--normal"
        data-v-56c81c82=""
      >
        <div
          aria-expanded="false"
          aria-selected="false"
          class="t-tab-bar-item__content t-tab-bar-item__content--normal"
          role="tab"
        >
          <div
            class="t-tab-bar-item__icon"
            style="height: 20px;"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__content"
              >
                
                
                <svg
                  class="t-icon t-icon-user"
                  data-v-56c81c82=""
                  style="font-size: 20px;"
                >
                  <use
                    href="#t-icon-user"
                  />
                </svg>
                
                
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              >
                <div
                  class="t-badge__count"
                >
                  ···
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-tab-bar-item__text t-tab-bar-item__text--small"
          >
            <!---->
            <!---->
          </div>
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="bar-wrapper"
    data-v-56c81c82=""
  >
    <div
      class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal"
      data-v-56c81c82=""
      role="tablist"
      style="z-index: 1;"
    >
      <!---->
      
      
      <div
        aria-label="首页，有16条消息"
        class="t-tab-bar-item t-tab-bar-item--normal"
        data-v-56c81c82=""
      >
        <div
          aria-expanded="false"
          aria-selected="true"
          class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--normal"
          role="tab"
        >
          <div
            class="t-tab-bar-item__icon"
            style="height: 20px;"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__content"
              >
                
                
                <svg
                  class="t-icon t-icon-home"
                  data-v-56c81c82=""
                  style="font-size: 20px;"
                >
                  <use
                    href="#t-icon-home"
                  />
                </svg>
                
                
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              >
                <div
                  class="t-badge__count"
                >
                  16
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-tab-bar-item__text t-tab-bar-item__text--small"
          >
            <!---->
            
            首页 
            
          </div>
        </div>
        <!---->
      </div>
      <div
        aria-label="软件，有新的消息"
        class="t-tab-bar-item t-tab-bar-item--normal"
        data-v-56c81c82=""
      >
        <div
          aria-expanded="false"
          aria-selected="false"
          class="t-tab-bar-item__content t-tab-bar-item__content--normal"
          role="tab"
        >
          <div
            class="t-tab-bar-item__icon"
            style="height: 20px;"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__content"
              >
                
                
                <svg
                  class="t-icon t-icon-app"
                  data-v-56c81c82=""
                  style="font-size: 20px;"
                >
                  <use
                    href="#t-icon-app"
                  />
                </svg>
                
                
              </div>
              <div
                class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
              >
                <div
                  class="t-badge__count"
                >
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-tab-bar-item__text t-tab-bar-item__text--small"
          >
            <!---->
            
            软件 
            
          </div>
        </div>
        <!---->
      </div>
      <div
        aria-label="聊天，New"
        class="t-tab-bar-item t-tab-bar-item--normal"
        data-v-56c81c82=""
      >
        <div
          aria-expanded="false"
          aria-selected="false"
          class="t-tab-bar-item__content t-tab-bar-item__content--normal"
          role="tab"
        >
          <div
            class="t-tab-bar-item__icon"
            style="height: 20px;"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__content"
              >
                
                
                <svg
                  class="t-icon t-icon-chat"
                  data-v-56c81c82=""
                  style="font-size: 20px;"
                >
                  <use
                    href="#t-icon-chat"
                  />
                </svg>
                
                
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              >
                <div
                  class="t-badge__count"
                >
                  New
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-tab-bar-item__text t-tab-bar-item__text--small"
          >
            <!---->
            
            聊天 
            
          </div>
        </div>
        <!---->
      </div>
      <div
        aria-label="我的，有很多消息"
        class="t-tab-bar-item t-tab-bar-item--normal"
        data-v-56c81c82=""
      >
        <div
          aria-expanded="false"
          aria-selected="false"
          class="t-tab-bar-item__content t-tab-bar-item__content--normal"
          role="tab"
        >
          <div
            class="t-tab-bar-item__icon"
            style="height: 20px;"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__content"
              >
                
                
                <svg
                  class="t-icon t-icon-user"
                  data-v-56c81c82=""
                  style="font-size: 20px;"
                >
                  <use
                    href="#t-icon-user"
                  />
                </svg>
                
                
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              >
                <div
                  class="t-badge__count"
                >
                  ···
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-tab-bar-item__text t-tab-bar-item__text--small"
          >
            <!---->
            
            我的 
            
          </div>
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  
</div>
`;

exports[`TabBar > TabBar baseVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal"
  role="tablist"
  style="z-index: 1;"
>
  <!---->
  
  
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="true"
      class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-home"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-home"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        
        首页 
        
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-app"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-app"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        
        应用 
        
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-chat"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-chat"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        
        聊天 
        
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-user"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-user"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        
        我的 
        
      </div>
    </div>
    <!---->
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar customVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal wrapper"
  data-v-d74bfed2=""
  role="tablist"
  style="z-index: 1;"
>
  <!---->
  
  
  <div
    class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
    data-v-d74bfed2=""
  >
    <div
      aria-expanded="false"
      aria-selected="true"
      class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--normal"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-home"
          data-v-d74bfed2=""
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-home"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
    data-v-d74bfed2=""
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--normal"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-app"
          data-v-d74bfed2=""
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-app"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
    data-v-d74bfed2=""
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--normal"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-chat"
          data-v-d74bfed2=""
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-chat"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
    data-v-d74bfed2=""
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--normal"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-user"
          data-v-d74bfed2=""
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-user"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-8bf7e573=""
>
  <h1
    class="title"
    data-v-8bf7e573=""
  >
    TabBar 底部标签栏
  </h1>
  <p
    class="summary"
    data-v-8bf7e573=""
  >
    用于在不同功能模块之间进行快速切换，位于页面底部。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-8bf7e573=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        纯文本标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal"
        data-v-8bf7e573=""
        role="tablist"
        style="z-index: 1;"
      >
        <!---->
        
        
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="true"
            class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
            role="tab"
          >
            <!---->
            <div
              class="t-tab-bar-item__text"
            >
              <!---->
              
              首页
              
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <!---->
            <div
              class="t-tab-bar-item__text"
            >
              <!---->
              
              应用
              
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <!---->
            <div
              class="t-tab-bar-item__text"
            >
              <!---->
              
              聊天
              
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <!---->
            <div
              class="t-tab-bar-item__text"
            >
              <!---->
              
              我的
              
            </div>
          </div>
          <!---->
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-8bf7e573=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        图标加文字标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal"
        data-v-8bf7e573=""
        role="tablist"
        style="z-index: 1;"
      >
        <!---->
        
        
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="true"
            class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-home"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-home"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              
              首页 
              
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-app"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-app"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              
              应用 
              
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-chat"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-chat"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              
              聊天 
              
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-user"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-user"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              
              我的 
              
            </div>
          </div>
          <!---->
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-8bf7e573=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        纯图标标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal"
        data-v-8bf7e573=""
        role="tablist"
        style="z-index: 1;"
      >
        <!---->
        
        
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="true"
            class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-home"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-home"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-app"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-app"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-chat"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-chat"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-user"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-user"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              <!---->
            </div>
          </div>
          <!---->
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-8bf7e573=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        双层级纯文本标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal"
        data-v-8bf7e573=""
        role="tablist"
        style="z-index: 1;"
      >
        <!---->
        
        
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="true"
            class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
            role="tab"
          >
            <!---->
            <div
              class="t-tab-bar-item__text"
            >
              <!---->
              
              首页
              
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <!---->
            <div
              class="t-tab-bar-item__text"
            >
              <!---->
              
              应用
              
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="button"
          >
            <!---->
            <div
              class="t-tab-bar-item__text"
            >
              <svg
                class="t-icon t-icon-view-list t-tab-bar-item__icon-menu"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="view-list"
                >
                  <path
                    d="M3 5H21M3 12H21M3 19H21"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
              
              我的
              
            </div>
          </div>
          <!---->
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-8bf7e573=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        弱选中标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="bar-wrapper"
        data-v-56c81c82=""
      >
        <div
          class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal"
          data-v-56c81c82=""
          role="tablist"
          style="z-index: 1;"
        >
          <!---->
          
          
          <div
            aria-label="首页，有16条消息"
            class="t-tab-bar-item t-tab-bar-item--normal"
            data-v-56c81c82=""
          >
            <div
              aria-expanded="false"
              aria-selected="true"
              class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--normal"
              role="tab"
            >
              <!---->
              <div
                class="t-tab-bar-item__text"
              >
                <!---->
                
                首页
                
              </div>
            </div>
            <!---->
          </div>
          <div
            aria-label="软件，有新的消息"
            class="t-tab-bar-item t-tab-bar-item--normal"
            data-v-56c81c82=""
          >
            <div
              aria-expanded="false"
              aria-selected="false"
              class="t-tab-bar-item__content t-tab-bar-item__content--normal"
              role="tab"
            >
              <!---->
              <div
                class="t-tab-bar-item__text"
              >
                <!---->
                
                软件
                
              </div>
            </div>
            <!---->
          </div>
          <div
            aria-label="聊天，New"
            class="t-tab-bar-item t-tab-bar-item--normal"
            data-v-56c81c82=""
          >
            <div
              aria-expanded="false"
              aria-selected="false"
              class="t-tab-bar-item__content t-tab-bar-item__content--normal"
              role="tab"
            >
              <!---->
              <div
                class="t-tab-bar-item__text"
              >
                <!---->
                
                聊天
                
              </div>
            </div>
            <!---->
          </div>
          <div
            aria-label="我的，有很多消息"
            class="t-tab-bar-item t-tab-bar-item--normal"
            data-v-56c81c82=""
          >
            <div
              aria-expanded="false"
              aria-selected="false"
              class="t-tab-bar-item__content t-tab-bar-item__content--normal"
              role="tab"
            >
              <!---->
              <div
                class="t-tab-bar-item__text"
              >
                <!---->
                
                我的
                
              </div>
            </div>
            <!---->
          </div>
          
          
        </div>
      </div>
      <div
        class="bar-wrapper"
        data-v-56c81c82=""
      >
        <div
          class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal"
          data-v-56c81c82=""
          role="tablist"
          style="z-index: 1;"
        >
          <!---->
          
          
          <div
            aria-label="首页，有16条消息"
            class="t-tab-bar-item t-tab-bar-item--normal"
            data-v-56c81c82=""
          >
            <div
              aria-expanded="false"
              aria-selected="true"
              class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--normal"
              role="tab"
            >
              <div
                class="t-tab-bar-item__icon"
                style="height: 20px;"
              >
                <div
                  class="t-badge"
                >
                  <div
                    class="t-badge__content"
                  >
                    
                    
                    <svg
                      class="t-icon t-icon-home"
                      data-v-56c81c82=""
                      style="font-size: 20px;"
                    >
                      <use
                        href="#t-icon-home"
                      />
                    </svg>
                    
                    
                  </div>
                  <div
                    class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                  >
                    <div
                      class="t-badge__count"
                    >
                      16
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="t-tab-bar-item__text t-tab-bar-item__text--small"
              >
                <!---->
                <!---->
              </div>
            </div>
            <!---->
          </div>
          <div
            aria-label="软件，有新的消息"
            class="t-tab-bar-item t-tab-bar-item--normal"
            data-v-56c81c82=""
          >
            <div
              aria-expanded="false"
              aria-selected="false"
              class="t-tab-bar-item__content t-tab-bar-item__content--normal"
              role="tab"
            >
              <div
                class="t-tab-bar-item__icon"
                style="height: 20px;"
              >
                <div
                  class="t-badge"
                >
                  <div
                    class="t-badge__content"
                  >
                    
                    
                    <svg
                      class="t-icon t-icon-app"
                      data-v-56c81c82=""
                      style="font-size: 20px;"
                    >
                      <use
                        href="#t-icon-app"
                      />
                    </svg>
                    
                    
                  </div>
                  <div
                    class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
                  >
                    <div
                      class="t-badge__count"
                    >
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="t-tab-bar-item__text t-tab-bar-item__text--small"
              >
                <!---->
                <!---->
              </div>
            </div>
            <!---->
          </div>
          <div
            aria-label="聊天，New"
            class="t-tab-bar-item t-tab-bar-item--normal"
            data-v-56c81c82=""
          >
            <div
              aria-expanded="false"
              aria-selected="false"
              class="t-tab-bar-item__content t-tab-bar-item__content--normal"
              role="tab"
            >
              <div
                class="t-tab-bar-item__icon"
                style="height: 20px;"
              >
                <div
                  class="t-badge"
                >
                  <div
                    class="t-badge__content"
                  >
                    
                    
                    <svg
                      class="t-icon t-icon-chat"
                      data-v-56c81c82=""
                      style="font-size: 20px;"
                    >
                      <use
                        href="#t-icon-chat"
                      />
                    </svg>
                    
                    
                  </div>
                  <div
                    class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                  >
                    <div
                      class="t-badge__count"
                    >
                      New
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="t-tab-bar-item__text t-tab-bar-item__text--small"
              >
                <!---->
                <!---->
              </div>
            </div>
            <!---->
          </div>
          <div
            aria-label="我的，有很多消息"
            class="t-tab-bar-item t-tab-bar-item--normal"
            data-v-56c81c82=""
          >
            <div
              aria-expanded="false"
              aria-selected="false"
              class="t-tab-bar-item__content t-tab-bar-item__content--normal"
              role="tab"
            >
              <div
                class="t-tab-bar-item__icon"
                style="height: 20px;"
              >
                <div
                  class="t-badge"
                >
                  <div
                    class="t-badge__content"
                  >
                    
                    
                    <svg
                      class="t-icon t-icon-user"
                      data-v-56c81c82=""
                      style="font-size: 20px;"
                    >
                      <use
                        href="#t-icon-user"
                      />
                    </svg>
                    
                    
                  </div>
                  <div
                    class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                  >
                    <div
                      class="t-badge__count"
                    >
                      ···
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="t-tab-bar-item__text t-tab-bar-item__text--small"
              >
                <!---->
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
          
        </div>
      </div>
      <div
        class="bar-wrapper"
        data-v-56c81c82=""
      >
        <div
          class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal"
          data-v-56c81c82=""
          role="tablist"
          style="z-index: 1;"
        >
          <!---->
          
          
          <div
            aria-label="首页，有16条消息"
            class="t-tab-bar-item t-tab-bar-item--normal"
            data-v-56c81c82=""
          >
            <div
              aria-expanded="false"
              aria-selected="true"
              class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--normal"
              role="tab"
            >
              <div
                class="t-tab-bar-item__icon"
                style="height: 20px;"
              >
                <div
                  class="t-badge"
                >
                  <div
                    class="t-badge__content"
                  >
                    
                    
                    <svg
                      class="t-icon t-icon-home"
                      data-v-56c81c82=""
                      style="font-size: 20px;"
                    >
                      <use
                        href="#t-icon-home"
                      />
                    </svg>
                    
                    
                  </div>
                  <div
                    class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                  >
                    <div
                      class="t-badge__count"
                    >
                      16
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="t-tab-bar-item__text t-tab-bar-item__text--small"
              >
                <!---->
                
                首页 
                
              </div>
            </div>
            <!---->
          </div>
          <div
            aria-label="软件，有新的消息"
            class="t-tab-bar-item t-tab-bar-item--normal"
            data-v-56c81c82=""
          >
            <div
              aria-expanded="false"
              aria-selected="false"
              class="t-tab-bar-item__content t-tab-bar-item__content--normal"
              role="tab"
            >
              <div
                class="t-tab-bar-item__icon"
                style="height: 20px;"
              >
                <div
                  class="t-badge"
                >
                  <div
                    class="t-badge__content"
                  >
                    
                    
                    <svg
                      class="t-icon t-icon-app"
                      data-v-56c81c82=""
                      style="font-size: 20px;"
                    >
                      <use
                        href="#t-icon-app"
                      />
                    </svg>
                    
                    
                  </div>
                  <div
                    class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
                  >
                    <div
                      class="t-badge__count"
                    >
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="t-tab-bar-item__text t-tab-bar-item__text--small"
              >
                <!---->
                
                软件 
                
              </div>
            </div>
            <!---->
          </div>
          <div
            aria-label="聊天，New"
            class="t-tab-bar-item t-tab-bar-item--normal"
            data-v-56c81c82=""
          >
            <div
              aria-expanded="false"
              aria-selected="false"
              class="t-tab-bar-item__content t-tab-bar-item__content--normal"
              role="tab"
            >
              <div
                class="t-tab-bar-item__icon"
                style="height: 20px;"
              >
                <div
                  class="t-badge"
                >
                  <div
                    class="t-badge__content"
                  >
                    
                    
                    <svg
                      class="t-icon t-icon-chat"
                      data-v-56c81c82=""
                      style="font-size: 20px;"
                    >
                      <use
                        href="#t-icon-chat"
                      />
                    </svg>
                    
                    
                  </div>
                  <div
                    class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                  >
                    <div
                      class="t-badge__count"
                    >
                      New
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="t-tab-bar-item__text t-tab-bar-item__text--small"
              >
                <!---->
                
                聊天 
                
              </div>
            </div>
            <!---->
          </div>
          <div
            aria-label="我的，有很多消息"
            class="t-tab-bar-item t-tab-bar-item--normal"
            data-v-56c81c82=""
          >
            <div
              aria-expanded="false"
              aria-selected="false"
              class="t-tab-bar-item__content t-tab-bar-item__content--normal"
              role="tab"
            >
              <div
                class="t-tab-bar-item__icon"
                style="height: 20px;"
              >
                <div
                  class="t-badge"
                >
                  <div
                    class="t-badge__content"
                  >
                    
                    
                    <svg
                      class="t-icon t-icon-user"
                      data-v-56c81c82=""
                      style="font-size: 20px;"
                    >
                      <use
                        href="#t-icon-user"
                      />
                    </svg>
                    
                    
                  </div>
                  <div
                    class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                  >
                    <div
                      class="t-badge__count"
                    >
                      ···
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="t-tab-bar-item__text t-tab-bar-item__text--small"
              >
                <!---->
                
                我的 
                
              </div>
            </div>
            <!---->
          </div>
          
          
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-8bf7e573=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        悬浮胶囊标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--round"
        data-v-8bf7e573=""
        role="tablist"
        style="z-index: 1;"
      >
        <!---->
        
        
        <div
          class="t-tab-bar-item t-tab-bar-item--round"
        >
          <div
            aria-expanded="false"
            aria-selected="true"
            class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-home"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-home"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--round"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-app"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-app"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--round"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-chat"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-chat"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--round"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-user"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-user"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              <!---->
            </div>
          </div>
          <!---->
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-8bf7e573=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        液态玻璃悬浮胶囊标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tab-bar-glass-demo"
        data-v-8bf7e573=""
        data-v-dde4e901=""
      >
        <div
          class="tab-bar-glass-demo__bg"
          data-v-dde4e901=""
        />
        <!--
      液态玻璃（对标 iOS 26）：
      - 组件内置的 __glass 折射层通过 CSS 变量接收"玻璃背后的画面"，用 SVG 位移贴图（边缘凸镜）+ 色散做真折射；
      - 折射为 opt-in：不传 --td-tab-bar-glass-image / --td-tab-bar-glass-refract 时，自动退化为 backdrop-filter 磨砂，兼容任意背景。
      注：真机像素级对齐需 App 把页面背景与 image-size/pos 对齐；此处 demo 为近似演示。
    -->
        <div
          class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--round-glass"
          data-v-dde4e901=""
          role="tablist"
          style="z-index: 1; --td-tab-bar-glass-image: linear-gradient(135deg, #ff8fb1, #ff5f7e 28%, #6f6cf0 66%, #1ec8ff); --td-tab-bar-glass-refract: blur(3px) url('#t-tab-bar-liquid-lens');"
        >
          <div
            aria-hidden="true"
            class="t-tab-bar__glass"
          />
          
          
          <div
            class="t-tab-bar-item t-tab-bar-item--round-glass"
            data-v-dde4e901=""
          >
            <div
              aria-expanded="false"
              aria-selected="true"
              class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
              role="tab"
            >
              <div
                class="t-tab-bar-item__icon"
                style="height: 20px;"
              >
                
                <svg
                  class="t-icon t-icon-home"
                  data-v-dde4e901=""
                  style="font-size: 20px;"
                >
                  <use
                    href="#t-icon-home"
                  />
                </svg>
                
              </div>
              <div
                class="t-tab-bar-item__text t-tab-bar-item__text--small"
              >
                <!---->
                <!---->
              </div>
            </div>
            <!---->
          </div>
          <div
            class="t-tab-bar-item t-tab-bar-item--round-glass"
            data-v-dde4e901=""
          >
            <div
              aria-expanded="false"
              aria-selected="false"
              class="t-tab-bar-item__content t-tab-bar-item__content--tag"
              role="tab"
            >
              <div
                class="t-tab-bar-item__icon"
                style="height: 20px;"
              >
                
                <svg
                  class="t-icon t-icon-app"
                  data-v-dde4e901=""
                  style="font-size: 20px;"
                >
                  <use
                    href="#t-icon-app"
                  />
                </svg>
                
              </div>
              <div
                class="t-tab-bar-item__text t-tab-bar-item__text--small"
              >
                <!---->
                <!---->
              </div>
            </div>
            <!---->
          </div>
          <div
            class="t-tab-bar-item t-tab-bar-item--round-glass"
            data-v-dde4e901=""
          >
            <div
              aria-expanded="false"
              aria-selected="false"
              class="t-tab-bar-item__content t-tab-bar-item__content--tag"
              role="tab"
            >
              <div
                class="t-tab-bar-item__icon"
                style="height: 20px;"
              >
                
                <svg
                  class="t-icon t-icon-chat"
                  data-v-dde4e901=""
                  style="font-size: 20px;"
                >
                  <use
                    href="#t-icon-chat"
                  />
                </svg>
                
              </div>
              <div
                class="t-tab-bar-item__text t-tab-bar-item__text--small"
              >
                <!---->
                <!---->
              </div>
            </div>
            <!---->
          </div>
          <div
            class="t-tab-bar-item t-tab-bar-item--round-glass"
            data-v-dde4e901=""
          >
            <div
              aria-expanded="false"
              aria-selected="false"
              class="t-tab-bar-item__content t-tab-bar-item__content--tag"
              role="tab"
            >
              <div
                class="t-tab-bar-item__icon"
                style="height: 20px;"
              >
                
                <svg
                  class="t-icon t-icon-user"
                  data-v-dde4e901=""
                  style="font-size: 20px;"
                >
                  <use
                    href="#t-icon-user"
                  />
                </svg>
                
              </div>
              <div
                class="t-tab-bar-item__text t-tab-bar-item__text--small"
              >
                <!---->
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
          
        </div>
        <svg
          aria-hidden="true"
          class="tab-bar-glass-demo__defs"
          data-v-dde4e901=""
        >
          <filter
            color-interpolation-filters="sRGB"
            data-v-dde4e901=""
            height="130%"
            id="t-tab-bar-liquid-lens"
            width="130%"
            x="-15%"
            y="-15%"
          >
            <!-- 离线烘焙的&quot;边缘凸镜&quot;位移贴图：中心中性、四周向内弯折 -->
            <feimage
              data-v-dde4e901=""
              height="100%"
              href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAUAAAABACAIAAADkhTlJAAABKUlEQVR42u3dwQqCQBiFUQvfu7c2LXXaVGRiUC2mS+cgQ8v4mQ9FUHelHEpzVW7r4zEv161j2l5f/Hixbh1Pf+l+NMsV1srGPv9+k3+21d/d5Osd3trvkKttJkOA3IBHQ4DcgM+GALkBD4YAAgYqBNwbAuQGfDQEEDAgYEDA8CcBd4YAuQG7Cw0uoQFnYOCtgE+GAAIGKgTsaSQIDtgD/RAc8GwIkGpvBCBgQMCAgEHAgIABAQMCBgEDAgYEDAIGBAwIGBAwCBgQMCBgQMAgYEDAgIBBwEAS74WG6IB9mQGCA/ZtJAgO2NcJQcBAjYB7Q4DcgI+GAM7AQIWAO0MAl9CAgAEBg4CBXw/YXWgIDngwBBAwUCFgTyNBcMCjIUBuwB7oh1jeiQXBLqU6qU1hLRa9AAAAAElFTkSuQmCC"
              preserveAspectRatio="none"
              result="map"
              width="100%"
              x="0"
              y="0"
            />
            <!-- 色散：红通道位移量(46)大于绿蓝(34)，边缘产生 RGB 分离 -->
            <fedisplacementmap
              data-v-dde4e901=""
              in="SourceGraphic"
              in2="map"
              result="dr"
              scale="46"
              xChannelSelector="R"
              yChannelSelector="G"
            />
            <fecolormatrix
              data-v-dde4e901=""
              in="dr"
              result="drR"
              type="matrix"
              values="1 0 0 0 0  0 0 0 0 0  0 0 0 0 0  0 0 0 1 0"
            />
            <fedisplacementmap
              data-v-dde4e901=""
              in="SourceGraphic"
              in2="map"
              result="dg"
              scale="34"
              xChannelSelector="R"
              yChannelSelector="G"
            />
            <fecolormatrix
              data-v-dde4e901=""
              in="dg"
              result="dgGB"
              type="matrix"
              values="0 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 1 0"
            />
            <fecomposite
              data-v-dde4e901=""
              in="drR"
              in2="dgGB"
              k1="0"
              k2="1"
              k3="1"
              k4="0"
              operator="arithmetic"
            />
          </filter>
        </svg>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-8bf7e573=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 自定义
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        自定义样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal wrapper"
        data-v-8bf7e573=""
        data-v-d74bfed2=""
        role="tablist"
        style="z-index: 1;"
      >
        <!---->
        
        
        <div
          class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
          data-v-d74bfed2=""
        >
          <div
            aria-expanded="false"
            aria-selected="true"
            class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--normal"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-home"
                data-v-d74bfed2=""
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-home"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
          data-v-d74bfed2=""
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--normal"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-app"
                data-v-d74bfed2=""
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-app"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
          data-v-d74bfed2=""
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--normal"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-chat"
                data-v-d74bfed2=""
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-chat"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
          data-v-d74bfed2=""
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--normal"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-user"
                data-v-d74bfed2=""
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-user"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!---->
              <!---->
            </div>
          </div>
          <!---->
        </div>
        
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`TabBar > TabBar pureIconVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal"
  role="tablist"
  style="z-index: 1;"
>
  <!---->
  
  
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="true"
      class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-home"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-home"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-app"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-app"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-chat"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-chat"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-user"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-user"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar roundVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--round"
  role="tablist"
  style="z-index: 1;"
>
  <!---->
  
  
  <div
    class="t-tab-bar-item t-tab-bar-item--round"
  >
    <div
      aria-expanded="false"
      aria-selected="true"
      class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-home"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-home"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--round"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-app"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-app"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--round"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-chat"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-chat"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--round"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-user"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-user"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar textSpreadVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal"
  role="tablist"
  style="z-index: 1;"
>
  <!---->
  
  
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="true"
      class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
      role="tab"
    >
      <!---->
      <div
        class="t-tab-bar-item__text"
      >
        <!---->
        
        首页
        
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <!---->
      <div
        class="t-tab-bar-item__text"
      >
        <!---->
        
        应用
        
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="button"
    >
      <!---->
      <div
        class="t-tab-bar-item__text"
      >
        <svg
          class="t-icon t-icon-view-list t-tab-bar-item__icon-menu"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="view-list"
          >
            <path
              d="M3 5H21M3 12H21M3 19H21"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        
        我的
        
      </div>
    </div>
    <!---->
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar textVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--safe t-tab-bar--normal"
  role="tablist"
  style="z-index: 1;"
>
  <!---->
  
  
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="true"
      class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
      role="tab"
    >
      <!---->
      <div
        class="t-tab-bar-item__text"
      >
        <!---->
        
        首页
        
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <!---->
      <div
        class="t-tab-bar-item__text"
      >
        <!---->
        
        应用
        
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <!---->
      <div
        class="t-tab-bar-item__text"
      >
        <!---->
        
        聊天
        
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <!---->
      <div
        class="t-tab-bar-item__text"
      >
        <!---->
        
        我的
        
      </div>
    </div>
    <!---->
  </div>
  
  
</div>
`;
